test/bad/generics/type08.px

func f<A,B,C>([A*B*C] p) def
    return

f([(1, 2)])
